# example_gtest_and_cmake

./: .gitignore  CMakeLists.txt  README.md
classes/: CMakeLists.txt  person.cpp  person.h
functions/: CMakeLists.txt  functions.cpp  functions.h
test/: CMakeLists.txt
test/classes/: person_test.cpp
test/functions/: functions_test.cpp
